# auduino

./: .gitignore  Makefile  README.md  auduino  configure.ac
include/: asm.h  debug.h  grain.h  grain.hpp  midi.h  phase.h  phase.hpp
src/: auduino.cpp  debug.cpp  midi.cpp
tools/: reader.py
